various typos and other minor corrections

--- a/01_agama/dirgha/DA_10.md
+++ b/01_agama/dirgha/DA_10.md
@@ -136,7 +136,7 @@ The monks accepted his instructions and listened.
 38\. “What are five things to be ceased? The five hindrances: The hindrance of greed, hindrance of anger, hindrance of drowsiness, hindrance of restlessness, and hindrance of doubt.
 {:#p38}
 
-39\. “What are five things that retreat? The five mental obstructions: First, a monk doubts the Buddha. Doubting the Buddha, he doesn’t befriend him. Not befriending him, he doesn’t respect him. This is the first mental obstruction. Second, a monk has practices that are penetrated by contaminants, practices that aren’t true, and practices that are defiled regarding the teaching … Third … saṃgha … Fourth … precepts … He doesn’t befriend the precepts and doesn’t respect them. This is the fourth mental obstruction. Fifth, a monk produces bad inclinations toward religious practitioners. His mind doesn’t delight in them, his words are harsh, and he criticizes them. This is the fifth mental obstruction.
+39\. “What are five things that retreat? The five mental obstructions: First, a monk doubts the Buddha. Doubting the Buddha, he doesn’t befriend him. Not befriending him, he doesn’t respect him. This is the first mental obstruction. Second, a monk has practices that are penetrated by contaminants, practices that aren’t true, and practices that are defiled regarding the teaching … Third … <em>saṅgha</em> … Fourth … precepts … He doesn’t befriend the precepts and doesn’t respect them. This is the fourth mental obstruction. Fifth, a monk produces bad inclinations toward religious practitioners. His mind doesn’t delight in them, his words are harsh, and he criticizes them. This is the fifth mental obstruction.
 {:#p39}
 
 40\. “What are five things that advance? The five roots of joy: delight, mindfulness, calm, happiness, and samādhi.
@@ -283,7 +283,7 @@ The monks accepted his instructions and listened.
 85\. “Also, he observes the arising and ceasing nature of the five acquired aggregates: ‘This is form, form’s coming together, and form’s cessation. This is feeling … conception … volition … awareness, awareness’s coming together, and awareness’s cessation.’ This is the eighth cause and condition that gains knowledge before the religious life is attained and that increases knowledge once it has been attained.
 {:#p85}
 
-86\. “What are eight things to be cultivated? The noble eightfold path: right view, right intent, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
+86\. “What are eight things to be cultivated? The noble eightfold path: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
 {:#p86}
 
 87\. “What are eight things to be recognized? The eight ways of the world: profit and decline, criticism and praise, admiration and censure, and pain and pleasure.
@@ -455,7 +455,7 @@ The monks accepted his instructions and listened.
 141\. “What are ten things to be achieved? The ten ways of salvation: First, a monk is perfect regarding the 250 precepts and perfect in his behavior. He feels great anxiety when he sees a small infraction. He fully learns the precepts, and he doesn’t have any inclination to corruption. Second, he makes good friends. Third, his language is proper, and he has a great deal of patience.[\[13\]](#n13){:#ref13} Fourth, he prefers to pursue the good teaching and disseminates it generously. Fifth, when religious practitioners undertake a task, he immediately goes to help them. He doesn’t regard it as troublesome, deals with difficulties, and instructs others to do the same. Sixth, he’s well-versed, able to retain what he learns, and isn’t ever forgetful. Seventh, he’s diligent in desisting from unskillful qualities and developing skillful qualities. Eighth, he constantly focuses on his own mindfulness without any other ideas, recalling his previous good conduct as though it were right in front of his eyes. Ninth, his wisdom is accomplished. He observes the law of arising and cessation and stops the source of suffering with the noble discipline. Tenth, he’s happy in a secluded dwelling focusing his attention and contemplating, and he isn’t agitated while he meditates.
 {:#p141}
 
-142\. “What are ten things to be cultivated? The ten right practices: right view, right intent, right speech, right action, right livelihood, right method, right samādhi, right liberation, and right knowledge.
+142\. “What are ten things to be cultivated? The ten right practices: right view, right intention, right speech, right action, right livelihood, right method, right samādhi, right liberation, and right knowledge.
 {:#p142}
 
 143\. “What are ten things to be recognized? The ten physical senses: the eye sense, ear sense, nose sense, tongue sense, body sense, sight sense, sound sense, odor sense, flavor sense, and touch sense.
@@ -479,7 +479,7 @@ The monks accepted his instructions and listened.
 149\. “What are ten things to know? The ten things to cease: A person of right view ceases wrong view. The numberless evils produced by the conditions of wrong view are all eliminated, and the numberless virtues produced by the causes of right view are all accomplished. Right intent … right speech … right action … right livelihood … right method … right mindfulness … right samādhi … right liberation … right knowledge. A person of right knowledge ceases wrong knowledge. The numberless evils produced by the causes of wrong knowledge are all eliminated, and the numberless virtues produced by the causes of right knowledge are all accomplished.
 {:#p149}
 
-150\. “What are ten things to be realized? The ten ways of an adept: right view, right intent, right speech, right action, right livelihood, right method, right samādhi, right liberation, and right knowledge.
+150\. “What are ten things to be realized? The ten ways of an adept: right view, right intention, right speech, right action, right livelihood, right method, right samādhi, right liberation, and right knowledge.
 {:#p150}
 
 151\. “Monks, these hundred things are true and not false. They’ve been known by the Tathāgata who teaches the Dharma equally.”
