--- a/01_agama/dirgha/DA_12.md
+++ b/01_agama/dirgha/DA_12.md
@@ -108,10 +108,10 @@ The monks then accepted the teaching and listened.
 32\. “What are eight things that lead to bad destinies? They are the eight wrong practices: wrong view, wrong intent, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong samādhi.
 {:#p32}
 
-33\. “What are eight things that lead to good destinies? They are the mundane right practices: right view, right intent, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
+33\. “What are eight things that lead to good destinies? They are the mundane right practices: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
 {:#p33}
 
-34\. “What are eight things that lead to Nirvāṇa? They are the noble eightfold path: right view, right intent, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
+34\. “What are eight things that lead to Nirvāṇa? They are the noble eightfold path: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
 {:#p34}
 
 35\. “Again, there are nine things that lead to bad destinies, nine things that lead to good destinies, and nine things that lead to Nirvāṇa.
@@ -135,7 +135,7 @@ The monks then accepted the teaching and listened.
 41\. “What are ten things that lead to good destinies? They are the ten skillful actions: Physically not killing, stealing, or committing adultery, verbally not being divisive, abusive, lying, or flattering, and mentally not being covetous, jealous, or having wrong views.
 {:#p41}
 
-42\. “What are ten things that lead to Nirvāṇa? They are the ten straight paths: right view, right intent, right speech, right action, right livelihood, right method, right mindfulness, right samādhi, right liberation, and right knowledge.
+42\. “What are ten things that lead to Nirvāṇa? They are the ten straight paths: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, right samādhi, right liberation, and right knowledge.
 {:#p42}
 
 43\. “Monks, thus are the ten things that make arriving at Nirvāṇa possible. This is called the sublime and correct teaching in three categories. I’m the Tathāgata; I’ve provided all that I should for you. Taking pity on you, I’ve lectured on the sutras and the path. You should also take pity on yourselves and go to a quiet place under a tree or in an empty dwelling to contemplate. Don’t be negligent. Nothing’s gained by not exerting yourselves today and regretting it later.”
