--- a/01_agama/dirgha/DA_21.md
+++ b/01_agama/dirgha/DA_21.md
@@ -21,7 +21,7 @@ next: DA_22.html
 4\. It was then that the Bhagavān overheard the monks having that discussion with his heavenly ear that surpasses the human ear. The Bhagavān emerged from his quiet abode, went to the meeting hall, and sat in front of that great assembly. Although he knew, he still asked them, “Monks, what’s the reason you’ve gathered here in the meeting hall? What are you discussing?”
 {:#p4}
 
-5\. The monks then said to the Buddha, “After soliciting alms, we gathered here in the meeting hall to have this discussion: ‘Amazing and rare are the great miraculous power and majestic virtue possessed by the Bhagavān. He fully knows the intentions and destinations of sentient beings, but the ascetic Supriya and his disciple always follow the Tathāgata and the Sangha of monks. The ascetic Supriya criticizes the Tathāgata, Dharma, and Saṅgha in countless ways, and his disciple Brahmadatta praises the Tathāgata, Dharma, and Saṅgha in countless ways. The teacher and his student both feel differently as a result of their different customs, different views, and different friends.’ We gathered here in the meeting hall to discuss this situation.”
+5\. The monks then said to the Buddha, “After soliciting alms, we gathered here in the meeting hall to have this discussion: ‘Amazing and rare are the great miraculous power and majestic virtue possessed by the Bhagavān. He fully knows the intentions and destinations of sentient beings, but the ascetic Supriya and his disciple always follow the Tathāgata and the Saṅgha of monks. The ascetic Supriya criticizes the Tathāgata, Dharma, and Saṅgha in countless ways, and his disciple Brahmadatta praises the Tathāgata, Dharma, and Saṅgha in countless ways. The teacher and his student both feel differently as a result of their different customs, different views, and different friends.’ We gathered here in the meeting hall to discuss this situation.”
 {:#p5}
 
 6\. The Bhagavān then told the monks, “If someone criticizes the Tathāgata, Dharma, and the Saṅgha in some way, don’t allow yourselves to feel angry and have harmful intent toward them. Why is that? If they criticize me, the Dharma, and Saṅgha of monks and you feel angry and have harmful intent, it’ll result in your own downfall; therefore, don’t allow yourself to feel angry and have harmful intent toward them.
