--- a/01_agama/dirgha/DA_23.md
+++ b/01_agama/dirgha/DA_23.md
@@ -414,7 +414,7 @@ The Buddha said, “There is.”
 
 The Buddha said, “Erecting monasteries and raised halls for the Saṅgha of the four directions is a gift that’s much greater than that of the three ways of ritual sacrifice and possession of sixteen ritual requisites or supporting the Saṅgha and not discontinuing it.”
 
-128\. “Is there something else that’s greater than this virtue of erecting monasteries and raised halls for the saṃgha in the four directions, which is itself greater than that of the three ways of ritual sacrifice and possession of sixteen ritual requisites or supporting the Saṅgha and not discontinuing it?”
+128\. “Is there something else that’s greater than this virtue of erecting monasteries and raised halls for the <em>saṅgha</em> in the four directions, which is itself greater than that of the three ways of ritual sacrifice and possession of sixteen ritual requisites or supporting the Saṅgha and not discontinuing it?”
 {:#p128}
 
 The Buddha said, “There is.”
