--- a/01_agama/ekottarika/19/EA_19_02.md
+++ b/01_agama/ekottarika/19/EA_19_02.md
@@ -20,7 +20,7 @@ next: ../24/EA_24_5.html
 3\. “Thus, after abandoning these two things, I myself possessed the essential path to achieving right awakening. Vision and knowledge arose, and my mind became still. I attained the penetrating knowledges, achieved the fruits of the ascetic, and arrived at nirvāṇa.
 {: #p3}
 
-4\. “What is that essential path that achieves right awakening, gives rise to vision and knowledge, stills the mind, attains the penetrating knowledges and fruits of the ascetic, and arrives at nirvāṇa? It’s this noble eightfold path, which is right view, right governance, right speech, right action, right livelihood, right method, right mindfulness, and right concentration. This is called the essential path.
+4\. “What is that essential path that achieves right awakening, gives rise to vision and knowledge, stills the mind, attains the penetrating knowledges and fruits of the ascetic, and arrives at nirvāṇa? It’s this noble eightfold path, which is right view, right control, right speech, right action, right livelihood, right method, right mindfulness, and right concentration. This is called the essential path.
 {: #p4}
 
 5\. “Now, I’ve achieved right awakening. Vision and knowledge arose, and my mind became still. I attained the penetrating knowledges, achieved the fruits of the ascetic, and arrived at nirvāṇa. Thus, monks, you should train by abandoning the above two things and practicing the essential path. Thus, monks, should you train.”
