--- a/01_agama/madhyama/MA_041.md
+++ b/01_agama/madhyama/MA_041.md
@@ -27,7 +27,7 @@ next: MA_042.html
   </tr>
   <tr>
     <td title='t125.2.484c8'>「『手長者有信者。』此何因說？ 手長者得信堅固。 深著如來，信根已立，終不隨外沙門、梵志、若天、魔、梵及餘世間。 『手長者有信者。』因此故說。</td>
-    <td id='p4'>4. “Why do I say, ‘The prominent man Hastaka is faithful’? Hastaka has obtained a firmness of faith. He is deeply attached to the Tathāgata, has established the faculty of faith, and will never follow ascetics and priest of other religions, gods like Māra and Brahmā, or any other worldly person. This is why I say, ‘The prominent man Hastaka is faithful.’</td>
+    <td id='p4'>4. “Why do I say, ‘The prominent man Hastaka is faithful’? Hastaka has obtained a firmness of faith. He is deeply attached to the Tathāgata, has established the faculty of faith, and will never follow Saṅgha of other religions, gods like Māra and Brahmā, or any other worldly person. This is why I say, ‘The prominent man Hastaka is faithful.’</td>
   </tr>
   <tr>
     <td title='t125.2.484c12'>「『手長者有慚者。』此何因說？ 手長者常行慚耻。 可慚、知慚惡不善法、穢污、煩惱受諸惡報，造生死本。 『手長者有慚者。』因此故說。</td>
