--- a/01_agama/samyukta/13/SA13_1.md
+++ b/01_agama/samyukta/13/SA13_1.md
@@ -14,7 +14,7 @@ next: SA13_2.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Just as the first sign of sunrise is called the first light of dawn, thus is the first sign of a monk correctly reaching the end of suffering, that final limit of suffering, called right view. That right view can produce right intent, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
+2\. It was then that the Bhagavān addressed the monks, “Just as the first sign of sunrise is called the first light of dawn, thus is the first sign of a monk correctly reaching the end of suffering, that final limit of suffering, called right view. That right view can produce right intention, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
 {:#p2}
 
 3\. “Because it produces the correct attainment of samādhi, the noble disciple’s mind is correctly liberated from desire, anger, and delusion. His mind is well liberated in this way. The noble disciple attains this correct knowledge and vision: ‘My births have been ended, the religious practice has been established, and the task has been done. I myself know that I won’t be subject to a later existence.’”
