--- a/01_agama/samyukta/13/SA13_11.md
+++ b/01_agama/samyukta/13/SA13_11.md
@@ -47,7 +47,7 @@ next: SA13_12.html
 12\. The monks said to the Buddha, “Isn’t there a path and steps to put an end to the first three fears of having a mother or son and the other three fears of lacking a mother or son when cultivated and cultivated often?”
 {:#p12}
 
-13\. The Buddha told the monks, “There is a path and steps that put an end to those three fears. What is that path and what are those steps to put an end to the first three fears of having a mother or son and the other three fears of lacking a mother or son when cultivated and cultivated often? It’s the noble eightfold path, which is right view, right intent, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.”
+13\. The Buddha told the monks, “There is a path and steps that put an end to those three fears. What is that path and what are those steps to put an end to the first three fears of having a mother or son and the other three fears of lacking a mother or son when cultivated and cultivated often? It’s the noble eightfold path, which is right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.”
 {:#p13}
 
 14\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
