--- a/01_agama/samyukta/13/SA13_12.md
+++ b/01_agama/samyukta/13/SA13_12.md
@@ -23,7 +23,7 @@ next: SA13_13.html
 4\. The Buddha told the monks, “There is a path and steps that put an end to these three feelings when cultivated and cultivated often. What is that path and those steps that put an end to these three feelings when cultivated and cultivated often?”
 {:#p4}
 
-5\. The Buddha told the monks, “They are the noble eightfold path and right view, right intent, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.”
+5\. The Buddha told the monks, “They are the noble eightfold path and right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.”
 {:#p5}
 
 6\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
