--- a/01_agama/samyukta/13/SA13_13.md
+++ b/01_agama/samyukta/13/SA13_13.md
@@ -20,7 +20,7 @@ next: SA13_14.html
 3\. The monks asked the Buddha, “Isn’t there a path and steps that put an end to these three things that are disagreeable, unattractive, and immemorable?”
 {:#p3}
 
-4\. The Buddha told the monks, “There is a path and steps that put an end to these three things that are disagreeable, unattractive, and immemorable when cultivated and cultivated often. What is that path and those steps that put an end to these three things that are disagreeable, unattractive, and immemorable when cultivated and cultivated often? It’s the noble eightfold path and right view, right intent, right speech, right action, right method, right mindfulness, and right samādhi.”
+4\. The Buddha told the monks, “There is a path and steps that put an end to these three things that are disagreeable, unattractive, and immemorable when cultivated and cultivated often. What is that path and those steps that put an end to these three things that are disagreeable, unattractive, and immemorable when cultivated and cultivated often? It’s the noble eightfold path and right view, right intention, right speech, right action, right method, right mindfulness, and right samādhi.”
 {:#p4}
 
 5\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
