--- a/01_agama/samyukta/13/SA13_14.md
+++ b/01_agama/samyukta/13/SA13_14.md
@@ -14,7 +14,7 @@ next: SA13_15.html
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “I will explain the trainee and the adept. Listen closely and consider it well. What is a trainee? It means a trainee’s accomplishment of right view … right intent … right speech … right action … right method … right mindfulness … accomplishment of right samādhi. This is called a trainee. What is an adept? It means an adept’s accomplishment of right view … right intent … right speech … right action … right method … right mindfulness … accomplishment of right samādhi. This is called an adept.”
+2\. It was then that the Bhagavān addressed the monks, “I will explain the trainee and the adept. Listen closely and consider it well. What is a trainee? It means a trainee’s accomplishment of right view … right intention … right speech … right action … right method … right mindfulness … accomplishment of right samādhi. This is called a trainee. What is an adept? It means an adept’s accomplishment of right view … right intention … right speech … right action … right method … right mindfulness … accomplishment of right samādhi. This is called an adept.”
 {:#p2}
 
 3\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
