--- a/01_agama/samyukta/13/SA13_18.md
+++ b/01_agama/samyukta/13/SA13_18.md
@@ -17,7 +17,7 @@ next: SA13_19.html
 2\. It was then that the Bhagavān addressed the monks, “Now, I will explain the cultivation of the noble eightfold path. Listen closely and consider it well.
 {:#p2}
 
-3\. “What is the cultivation of the noble eightfold path? Here, a monk cultivates right view, relying on seclusion, the lack of desire, cessation, and an orientation towards renunciation … cultivates right intent … right speech … right action … right livelihood … right method … right mindfulness … right samādhi, relying on seclusion, the lack of desire, cessation, and an orientation towards renunciation. This is called cultivating the noble eightfold path.”
+3\. “What is the cultivation of the noble eightfold path? Here, a monk cultivates right view, relying on seclusion, the lack of desire, cessation, and an orientation towards renunciation … cultivates right intention … right speech … right action … right livelihood … right method … right mindfulness … right samādhi, relying on seclusion, the lack of desire, cessation, and an orientation towards renunciation. This is called cultivating the noble eightfold path.”
 {:#p3}
 
 4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
