--- a/01_agama/samyukta/13/SA13_2.md
+++ b/01_agama/samyukta/13/SA13_2.md
@@ -17,7 +17,7 @@ next: SA13_3.html
 2\. It was then that the Bhagavān addressed the monks, “When ignorance is the first sign, it gives rise to bad and unskillful things. The lack of conscience and modesty then arises as a result. After the lack of conscience and modesty arises, wrong view arises as a result. After wrong view arises, it can produce wrong intent, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong samādhi.
 {:#p2}
 
-3\. “When the arising of insight is the first sign, it gives rise to good things. Conscience and modesty then arise. After conscience and modesty arise, they can give rise to right view. After right view arises, it produces right intent, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi in sequence. After right samādhi is produced, the noble disciple attains correct liberation from desire, anger, and delusion. After the noble disciple attains liberation in this way, they gain this correct knowledge and vision: ‘My births have been ended, the religious practice has been established, and the task has been done. I myself know that I won’t be subject to a later existence.’”
+3\. “When the arising of insight is the first sign, it gives rise to good things. Conscience and modesty then arise. After conscience and modesty arise, they can give rise to right view. After right view arises, it produces right intention, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi in sequence. After right samādhi is produced, the noble disciple attains correct liberation from desire, anger, and delusion. After the noble disciple attains liberation in this way, they gain this correct knowledge and vision: ‘My births have been ended, the religious practice has been established, and the task has been done. I myself know that I won’t be subject to a later existence.’”
 {:#p3}
 
 4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
