--- a/01_agama/samyukta/13/SA13_4.md
+++ b/01_agama/samyukta/13/SA13_4.md
@@ -11,7 +11,7 @@ next: SA13_5.html
 ## [13. Factors of the Noble Path](index.html)
 ### 4 (751). The Right Tasks
 
-1\. Thus I have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “If someone at home or who has left home undertakes the wrong tasks, that is not taught by me. Why is that? Someone living at home or has left home who undertakes the wrong tasks won’t be happy with the correct teaching. What are the wrong tasks? They refer to wrong view … wrong samādhi.
