--- a/01_agama/samyukta/13/SA13_8.md
+++ b/01_agama/samyukta/13/SA13_8.md
@@ -30,7 +30,7 @@ But the practitioner ends his mind’s desires.”
 4\. The monks said to the Buddha, “Bhagavān, isn’t there a path and steps to ending this craving desire?”
 {:#p4}
 
-The Buddha told the monks, “There is the right eightfold path that can end craving desire, which is right view, right intent, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.”
+The Buddha told the monks, “There is the right eightfold path that can end craving desire, which is right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.”
 
 5\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p5}
