--- a/01_agama/dirgha/DA_11.md
+++ b/01_agama/dirgha/DA_11.md
@@ -178,7 +178,7 @@ The monks then accepted the teaching and listened.
 50\. “Also, he observes the arising and ceasing nature of the five acquired aggregates: ‘This is form, form’s coming together, and form’s cessation. This is feeling … conception … volition … consciousness, consciousness’s coming together, and consciousness’s cessation.’ This is the eighth cause and condition that gains knowledge before the religious life is attained and that increases knowledge once it has been attained.
 {:#p50}
 
-51\. “What are eight things to be cultivated? The noble eightfold path: right view, right intent, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
+51\. “What are eight things to be cultivated? The noble eightfold path: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.
 {:#p51}
 
 52\. “What are eight things to be recognized? The eight ways of the world: profit and decline, criticism and praise, admiration and censure, and pain and pleasure.
@@ -218,7 +218,7 @@ The monks then accepted the teaching and listened.
 62\. “What are ten things to be achieved? The ten ways of salvation: First, a monk is perfect regarding the 250 precepts and perfect in his behavior. He feels great anxiety when he sees a small infraction. He fully learns the precepts, and he doesn’t have any inclination to corruption. Second, he makes good friends. Third, his language is proper, and he has a great deal of patience. Fourth, he prefers to pursue the good teaching and disseminates it generously. Fifth, when religious practitioners undertake a task, he immediately goes to help them. He doesn’t regard it as troublesome, deals with difficulties, and instructs others to do the same. Sixth, he’s well-versed, able to retain what he learns, and isn’t ever forgetful. Seventh, he’s diligent in desisting from unskillful qualities and developing skillful qualities. Eighth, he constantly focuses on his own mindfulness without any other ideas, recalling his previous good conduct as though it were right in front of his eyes. Ninth, his wisdom is accomplished. He observes the law of arising and cessation and stops the source of suffering with the noble discipline. Tenth, he’s happy in a secluded dwelling focusing his attention and contemplating, and he isn’t agitated while he meditates.
 {:#p62}
 
-63\. “What are ten things to be cultivated? The ten right practices: right view, right intent, right speech, right action, right livelihood, right method, right samādhi, right liberation, and right knowledge.
+63\. “What are ten things to be cultivated? The ten right practices: right view, right intention, right speech, right action, right livelihood, right method, right samādhi, right liberation, and right knowledge.
 {:#p63}
 
 64\. “What are ten things to be recognized? The ten physical senses: the eye sense, ear sense, nose sense, tongue sense, body sense, sight sense, sound sense, odor sense, flavor sense, and touch sense.
@@ -227,7 +227,7 @@ The monks then accepted the teaching and listened.
 65\. “What are ten things to be ceased? They are the ten wrong practices: wrong view, wrong intent, wrong speech, wrong action, wrong livelihood, wrong method, wrong samādhi, wrong liberation, and wrong knowledge.
 {:#p65}
 
-66\. “What are ten things to be realized? The ten teachings of the adept: right view, right intent, right speech, right action, right livelihood, right method, right samādhi, right liberation, and right knowledge.
+66\. “What are ten things to be realized? The ten teachings of the adept: right view, right intention, right speech, right action, right livelihood, right method, right samādhi, right liberation, and right knowledge.
 {:#p66}
 
 67\. “Monks, this is called the teaching that increases one by one. Now, I’ve explained that teaching for you in this way. I’m the Tathāgata; I’ve provided all that I should for you. Having compassionately and courteously instructed you, you ought to endeavor to put it into practice.
