--- a/01_agama/dirgha/DA_25.md
+++ b/01_agama/dirgha/DA_25.md
@@ -22,25 +22,25 @@ next: DA_26.html
 4\. “Kāśyapa, I’ve seen those ascetics fall into hell when their bodies broke up and their lives ended. I’ve also seen ascetics born in a heavenly good place when their bodies broke up and their lives ended. Sometimes, I’ve seen ascetics who enjoyed the ascetic practices born in hell when their bodies broke up and their lives ended. Sometimes, I’ve seen ascetics who enjoyed the ascetic practices born in a heavenly good place.
 {:#p4}
 
-5\. “Kāśyapa, I fully know and fully see these two destinies that are places gotten as rewards. Why would I want to rebuke all those ascetics and consider them corrupt? When I correctly say ‘Yes,’ they then say ‘No.’ When I correctly say ‘No,’ they say ‘Yes.’ Kāśyapa, there are ascetics and priests who equally possess the way, and there are ascetics and priest who don’t equally possess the way. Kāśyapa, those who aren’t equal are the ones that I set aside because their teaching isn’t shared with ascetics and priests equally.
+5\. “Kāśyapa, I fully know and fully see these two destinies that are places gotten as rewards. Why would I want to rebuke all those ascetics and consider them corrupt? When I correctly say ‘Yes,’ they then say ‘No.’ When I correctly say ‘No,’ they say ‘Yes.’ Kāśyapa, there are ascetics and priests who equally possess the way, and there are ascetics and priests who don’t equally possess the way. Kāśyapa, those who aren’t equal are the ones that I set aside because their teaching isn’t shared with ascetics and priests equally.
 {:#p5}
 
-6\. “Kāśyapa, those who are wise make this observation: ‘When the ascetic Gautama had unskillful qualities, quite defiled, dark, and ignoble and when other teachers had the same qualities, which of them was capable of destroying these qualities?’ Kāśyapa, when the wise make this observation, they thus know and see that only the ascetic Gautama was able to destroy these qualities. Kāśyapa, when those who are wise make this observation, inquire into this, and discuss this, I’m the one who they name as being so.
+6\. “Kāśyapa, those who are wise make this observation: ‘When the ascetic Gautama had unskillful qualities that are quite defiled, dark, and ignoble and other teachers had the same qualities, which of them was capable of destroying these qualities?’ Kāśyapa, when the wise make this observation, they thus know and see that only the ascetic Gautama was able to destroy these qualities. Kāśyapa, when those who are wise make this observation, inquire into this, and discuss this, I’m the one who they name as being so.
 {:#p6}
 
-7\. “Furthermore, Kāśyapa, those who are wise make this observation: ‘When the ascetic Gautama’s disciples have unskillful qualities, quite defiled, dark, and ignoble and the disciple of other teachers have the same qualities, which of them is capable of destroying these qualities? Kāśyapa, when those who are wise make this observation, they thus know and see: ‘The ascetic Gautama’s disciples are able to destroy these qualities.’ Kāśyapa, when the wise make this observation, inquire into this, and discuss this, my disciples are who they name.
+7\. “Furthermore, Kāśyapa, those who are wise make this observation: ‘When the ascetic Gautama’s disciples have unskillful qualities that are quite defiled, dark, and ignoble and the disciples of other teachers have the same qualities, which of them is capable of destroying these qualities? Kāśyapa, when those who are wise make this observation, they thus know and see: ‘The ascetic Gautama’s disciples are able to destroy these qualities.’ Kāśyapa, when the wise make this observation, inquire into this, and discuss this, my disciples are who they name.
 {:#p7}
 
-8\. “Furthermore, Kāśyapa, those who are wise make this observation, ‘The ascetic Gautama has skillful qualities, pristine, sublime, and noble and other teachers have the same qualities. Which of them is capable of cultivating and making them grow?’ Kāśyapa, when the wise make this observation, they thus know and see: ‘Only the ascetic Gautama is capable of cultivating these qualities and making them grow.’ Kāśyapa, when the wise make this observation, inquire into this, and discuss this, I’m the one who they name as being so.
+8\. “Furthermore, Kāśyapa, those who are wise make this observation, ‘The ascetic Gautama has skillful qualities that are pristine, sublime, and noble and other teachers have the same qualities. Which of them is capable of cultivating and making them grow?’ Kāśyapa, when the wise make this observation, they thus know and see: ‘Only the ascetic Gautama is capable of cultivating these qualities and making them grow.’ Kāśyapa, when the wise make this observation, inquire into this, and discuss this, I’m the one who they name as being so.
 {:#p8}
 
-9\. “Kāśyapa, those who are wise make this observation: ‘When the ascetic Gautama’s disciples have skillful qualities, pristine, sublime, and noble, and the disciples of other teachers have the same qualities, which of them is capable of cultivating them and making them grow?’ Kāśyapa, when the wise make this observation, they thus know and see, ‘Only the ascetic Gautama’s disciples are capable of cultivating these qualities and making them grow.’ Kāśyapa, when the wise make this observation, inquire into this, and discuss this, my disciples are who they name.
+9\. “Kāśyapa, those who are wise make this observation: ‘When the ascetic Gautama’s disciples have skillful qualities that are pristine, sublime, and noble and the disciples of other teachers have the same qualities, which of them is capable of cultivating them and making them grow?’ Kāśyapa, when the wise make this observation, they thus know and see, ‘Only the ascetic Gautama’s disciples are capable of cultivating these qualities and making them grow.’ Kāśyapa, when the wise make this observation, inquire into this, and discuss this, my disciples are who they name.
 {:#p9}
 
-10\. “Kāśyapa, there’s a path and a way that a monk cultivates, and then he himself will know and see: ‘The ascetic Gautama’s speech is timely, genuine, meaningful, the teaching, and the discipline.’ Kāśyapa, what is the path and what are the way that a monk cultivates, and then he himself will know and see: ‘The ascetic Gautama’s speech is timely, genuine, meaningful, the teaching, and the discipline’?
+10\. “Kāśyapa, there’s a path and a way that a monk cultivates, and then he himself will know and see: ‘The ascetic Gautama’s speech is timely, genuine, meaningful, the teaching, and the discipline.’ Kāśyapa, what is the path and what is the way that a monk cultivates, and then he himself will know and see: ‘The ascetic Gautama’s speech is timely, genuine, meaningful, the teaching, and the discipline’?
 {:#p10}
 
-11\. “Kāśyapa, a monk cultivates the awakening factor of mindfulness based on stopping, lack of desire, and escape. He cultivates the awakening factor of the teaching … effort … joy … calm … samādhi … equanimity based on stopping, lack of desire, and escape. Kāśyapa, this is the path and the way that a monk cultivates, and then he himself will know and see: ‘The ascetic Gautama’s speech is timely, genuine, meaningful, the teaching, and the discipline.”
+11\. “Kāśyapa, a monk cultivates the awakening factor of mindfulness based on stopping, lack of desire, and escape. He cultivates the awakening factor of the teaching … effort … joy … calm … samādhi … equanimity based on stopping, lack of desire, and escape. Kāśyapa, this is the path and the way that a monk cultivates, and then he himself will know and see: ‘The ascetic Gautama’s speech is timely, genuine, meaningful, the teaching, and the discipline.’”
 {:#p11}
 
 12\. Kāśyapa said, “Gautama, there’s only this path and this way that a monk cultivates, and then he himself knows and sees: ‘The ascetic Gautama’s speech is timely, genuine, meaningful, the teaching, and the discipline.’ It’s only the dirty ascetic practices that make it possible to be named a priest or an ascetic. What dirty ascetic practices make it possible to be named a priest or an ascetic?
@@ -88,7 +88,7 @@ Kāśyapa said, “Gautama, although you say this completion of precepts and com
 
 Kāśyapa said, “Very well, Gautama. I’d be glad to hear it.”
 
-25\. The Buddha said, “Kāśyapa, with samādhi of mind, a monk … attains the three insights, destroys the darkness of delusions, and produces the light of wisdom. This is called producing the knowledge that the contaminants have ended. Why is that? These things are a result of diligence, focused attention, not being forgetful, delighting in quiet seclusion, and not being self-indulgent. Kāśyapa, this is called an ascetic or priest whose precepts and views are complete, and who’s superior, higher, fine, and supreme.
+25\. The Buddha said, “Kāśyapa, with samādhi of mind, a monk … attains the three insights, destroys the darkness of delusions, and produces the light of wisdom. This is called producing the knowledge that the contaminants have ended. Why is that? These things are a result of diligence, focused attention, not being forgetful, delighting in quiet seclusion, and not being self-indulgent. Kāśyapa, this is called an ascetic or priest whose precepts and views are complete, and who’s superior, higher, fine, and supreme.”
 {:#p25}
 
 Kāśyapa said, “Gautama, although you say this is an ascetic or priest whose views and precepts are complete and who’s higher, superior, fine, and supreme, it’s only being an ascetic or priest that’s exceedingly difficult. It’s exceedingly difficult! An ascetic is also hard to know, and a priest is also hard to know.”
@@ -104,7 +104,7 @@ Kāśyapa said, “Gautama, who hasn’t Gautama made rejoice greatly, attain pu
 28\. The Buddha told Kāśyapa, “Those precepts possessed by the world don’t possess or accompany the higher precepts, and the rest. How could they want to produce anything higher? They possess samādhi, wisdom, and liberation, and have seen the liberation of wisdom, but they don’t possess or accompany these higher samādhi, wisdom, liberation, and seeing the liberation of wisdom. How could they want to produce anything higher?
 {:#p28}
 
-29\. “Kāśyapa, the Tathāgata, Arhat, and Completely Awakened One is a lion. When he teachings Dharma in detail in a great assembly, he’s sovereign and fearless, so he’s called a lion.
+29\. “Kāśyapa, the Tathāgata, Arhat, and Completely Awakened One is a lion. When he teaches the Dharma in detail to a great assembly, he’s sovereign and fearless, so he’s called a lion.
 {:#p29}
 
 30\. “How is it, Kāśyapa? Would you say that Tathāgata isn’t courageous when he roars the lion’s roar? Don’t imagine this. The Tathāgata’s lion’s roar is courageous and fearless.
