--- a/01_agama/dirgha/DA_29.md
+++ b/01_agama/dirgha/DA_29.md
@@ -32,7 +32,7 @@ The Bhagavān then silently accepted his invitation.
 7\. His barber accepted and performed his instructions. He went to the Buddha and bowed at the Bhagavān’s feet. “Once the day has come, you should know that it’s time.”
 {:#p7}
 
-8\. The Bhagavān then put on his robe, picked up his bowl, and when to the sal grove with his 1,250 disciples.
+8\. The Bhagavān then put on his robe, picked up his bowl, and went to the sal grove with his 1,250 disciples.
 {:#p8}
 
 9\. The barber followed the Bhagavān on his right side, saluted him with his palms together, and told the Buddha, “That brahmin Lohitya had this evil view occur to him not far from the Buddha when he left: ‘Mendicants and brahmins often know the good Dharma, and many are their proofs, but they shouldn’t teach it to other people. They simply know it for themselves and desist from discussing it with others. It’s like a man who builds a new prison after he destroys an old prison. It’s a greedy, bad, and unwholesome thing!’ May the Bhagavān remove his bad view.”
@@ -48,7 +48,7 @@ The Buddha told the barber, “This is only a minor subject that’s easily taug
 
 Lohitya said, “Yes, it’s true that this happened.”
 
-12\. The Buddha told Lohitya, “Don’t let this bad view arise again. What is the reason for that? There are three teachers in the world whom it’s possible admonish yourself. Who are the three? One shaves off his hair, wears the three Dharma robes, and leaves home to cultivate the path. Here in the present, he could be rid of the afflictions, and he could develop and attain the state of a superior man. Here in the present, however, he isn’t rid of the afflictions, and he doesn’t attain the state of a superior man. His work is incomplete, yet he teaches the Dharma for his disciples. His disciples don’t respect or serve him. As a result, they again support him and reside with him as equals.
+12\. The Buddha told Lohitya, “Don’t let this bad view arise again. What is the reason for that? There are three teachers in the world whom you can admonish. Who are the three? One shaves off his hair, wears the three Dharma robes, and leaves home to cultivate the path. Here in the present, he could be rid of the afflictions, and he could develop and attain the state of a superior man. Here in the present, however, he isn’t rid of the afflictions, and he doesn’t attain the state of a superior man. His work is incomplete, yet he teaches the Dharma for his disciples. His disciples don’t respect or serve him. As a result, they support him and reside with him as equals.
 {:#p12}
 
 13\. “Lohitya, those disciples say to their teacher, ‘Teacher, now you’ve shaven off your hair, put on the three Dharma robes, and left home to cultivate the path. Here in the present, you could be rid of the myriad afflictions and attain the supreme state of a superior man. Here in the present, however, you aren’t able to be rid of the afflictions nor attain the supreme state of a superior man. Your work is incomplete, yet you teach the Dharma for disciples, which causes your disciples to no longer respect, serve, or make offerings. They just share your support and reside as equals.’”
@@ -63,7 +63,7 @@ Lohitya said, “Yes, it’s true that this happened.”
 16\. “Lohitya, those disciples say to the teacher, ‘Teacher, now you’ve shaven off your hair, put on the three Dharma robes, and left home to cultivate the path. Here in the present, you could be rid of the myriad afflictions and attain the state of a superior man. Here in the present, however, you aren’t able to be rid of the myriad afflictions, although you’ve attained a little or a lot of the state of a superior man. Your own benefit is incomplete, yet you teach the Dharma for disciples, which causes your disciples to no longer respect, serve, or make offerings. They just share your support and reside as equals.’”
 {:#p16}
 
-17\. The Buddha continued, “Lohitya, like a man who rubs another’s back with his hand after walking, this is called a greedy, degenerate thing. This is the second teacher whom it’s possible to admonish yourself. It’s a precept of nobles, a precept of the discipline, a precept of propriety, and a precept of the time.
+17\. The Buddha continued, “Lohitya, like a man who rubs another’s back with his hand after walking, this is called a greedy, degenerate thing. This is the second teacher whom it’s possible to admonish yourself. It’s a precept of nobles, a precept of the discipline, a precept of propriety, and a precept of the time.”
 {:#p17}
 
 18\. He also told Lohitya, “A third teacher shaves off his hair, wears the three Dharma robes, and leaves home to cultivate the path. Here in the present, he could be rid of the afflictions, and he could develop and attain the state of a superior man. Here in the present, however, he isn’t able to be rid of the myriad afflictions, even though he again does attain a little or a lot of the state of a superior man. His own benefit is incomplete, yet he teaches the Dharma for his disciples. His disciples don’t respect or serve him, supporting him and residing as his equals.
@@ -75,10 +75,10 @@ Lohitya said, “Yes, it’s true that this happened.”
 20\. The Buddha said, “Lohitya, like a man who plows another’s field after abandoning his own crop, this is a greedy, degenerate teaching. This is the third teacher whom it’s possible to admonish yourself. It’s a precept of nobles, a precept of the discipline, a precept of propriety, and a precept of the time.
 {:#p20}
 
-21\. “Lohitya, there’s one Bhagavān who doesn’t reside in the mundane and cannot be shaken. Who is the one? If a Tathāgata, an Arhat, and a Completely Awakened One appears in the world up to attains three knowledges, eliminates ignorance, gives rise to the radiance of wisdom, leaves behind darkness, and produces the great light of Dharma, then that’s known as the realization of the knowledge that the contaminants are ended. What is the reason for that? These are attainments that come from diligence, focus, mindfulness, unforgetfulness, and happy solitude. Lohitya, this is the first Bhagavān who doesn’t reside in the mundane and cannot be shaken.
+21\. “Lohitya, there’s one Bhagavān who doesn’t reside in the mundane and cannot be shaken. Who is the one? If a Tathāgata, an Arhat, and a Completely Awakened One appears in the world … <em>up to</em> … attains three knowledges, eliminates ignorance, gives rise to the radiance of wisdom, leaves behind darkness, and produces the great light of Dharma, then that’s known as the realization of the knowledge that the contaminants are ended. What is the reason for that? These are attainments that come from diligence, focus, mindfulness, unforgetfulness, and happy solitude. Lohitya, this is the first Bhagavān who doesn’t reside in the mundane and cannot be shaken.
 {:#p21}
 
-22\. “Lohitya, there are four fruits of the mendicant. What are the four? They are the fruit of stream entry, fruit of one more return, fruit of no return, and the fruit of the arhat. How is it, Lohitya? Someone who hears the teaching should attain these four fruits of a mendicant. Suppose someone prohibits it by saying, ‘Don’t teach the Dharma.’ If those words are put into action, would that person hear the Dharma and attain these fruits by doing so?”
+22\. “Lohitya, there are four fruits of the mendicant. What are the four? They are the The fruit of stream-entry, fruit of once-returning, fruit of non-returning, and the fruit of the <em>arhat</em>. How is it, Lohitya? Someone who hears the teaching should attain these four fruits of a mendicant. Suppose someone prohibits it by saying, ‘Don’t teach the Dharma.’ If those words are put into action, would that person hear the Dharma and attain these fruits by doing so?”
 {:#p22}
 
 “He won’t attain them.”
@@ -168,7 +168,7 @@ Lohitya said, “Yes, it’s true that this happened.”
 
 “He’ll fall to a bad destiny.”
 
-40\. The brahmin Lohitya then said to the Buddha, “I take refuge in the Buddha, refuge in the Dharma, and refuge in the Saṃgha. Please permit me to be a layman in the correct teaching. From this day forward, I will not kill, steal, commit sexual misconduct, lie, or drink alcohol for all my life.”
+40\. The brahmin Lohitya then said to the Buddha, “I take refuge in the Buddha, refuge in the Dharma, and refuge in the Saṅgha. Please permit me to be a layman in the correct teaching. From this day forward, I will not kill, steal, commit sexual misconduct, lie, or drink alcohol for all my life.”
 {:#p40}
 
 41\. After the Buddha had taught the Dharma, the brahmin Lohitya heard what the Buddha had said, rejoiced, and approved.
