--- a/01_agama/samyukta/01/SA1_162.md
+++ b/01_agama/samyukta/01/SA1_162.md
@@ -15,7 +15,7 @@ next: SA1_163.html
   <th class='en'>162 (50). Ānanda (2)</th>
   <tr>
     <td title='t99.2.12b10'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
-    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
     <td title='t99.2.12b11'>爾時，世尊告尊者阿難曰： 「若有諸外道出家來問汝言： 『阿難，世尊何故教人修諸梵行？』 如是問者云何答乎？」</td>
