--- a/01_agama/samyukta/13/SA13_10.md
+++ b/01_agama/samyukta/13/SA13_10.md
@@ -14,7 +14,7 @@ next: SA13_11.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Buddha addressed the monks, “There’s the expression ‘roots and requirements of the noble ones’ samādhi.’ What are these ‘roots and requirements of the noble ones’ samādhi’? That refers to the seven parts of the right path that are both the roots and requirements of the noble ones’ samādhi. What are the seven? They are right view, right intent, right speech, right action, right livelihood, right method, and right mindfulness. After someone has come to possess these seven parts of the path, they gain oneness of mind. These are called the roots and requirements of the noble ones’ samādhi.”
+2\. It was then that the Buddha addressed the monks, “There’s the expression ‘roots and requirements of the noble ones’ samādhi.’ What are these ‘roots and requirements of the noble ones’ samādhi’? That refers to the seven parts of the right path that are both the roots and requirements of the noble ones’ samādhi. What are the seven? They are right view, right intention, right speech, right action, right livelihood, right method, and right mindfulness. After someone has come to possess these seven parts of the path, they gain oneness of mind. These are called the roots and requirements of the noble ones’ samādhi.”
 {:#p2}
 
 3\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
