--- a/01_agama/samyukta/13/SA13_14-15.md
+++ b/01_agama/samyukta/13/SA13_14-15.md
@@ -14,7 +14,7 @@ next: SA13_14.html
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “I will explain the trainee and the adept (13.14) <em>or</em> the correct man and the great man[\[2\]](#n2){:#ref2} (13.15). Listen closely and consider it well. What is a trainee <em>or</em> correct man? It means their accomplishment of right view … right intent … right speech … right action … right method … right mindfulness … accomplishment of right samādhi. This is called a trainee <em>or</em> correct man. What is an adept <em>or</em> great man? It means their accomplishment of right view … right intent … right speech … right action … right method … right mindfulness … accomplishment of right samādhi. This is called an adept <em>or</em> great man.”
+2\. It was then that the Bhagavān addressed the monks, “I will explain the trainee and the adept (13.14) <em>or</em> the correct man and the great man[\[2\]](#n2){:#ref2} (13.15). Listen closely and consider it well. What is a trainee <em>or</em> correct man? It means their accomplishment of right view … right intention … right speech … right action … right method … right mindfulness … accomplishment of right samādhi. This is called a trainee <em>or</em> correct man. What is an adept <em>or</em> great man? It means their accomplishment of right view … right intention … right speech … right action … right method … right mindfulness … accomplishment of right samādhi. This is called an adept <em>or</em> great man.”
 {:#p2}
 
 3\. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.
@@ -26,6 +26,7 @@ next: SA13_14.html
 
 1. {:#n1} These two versions of the same <em>sūtra</em> seem similar to [SN 45.13](https://suttacentral.net/sn45.13){:target="_blank"}, but the Pali <em>sutta</em> only mentions the trainee. [\[back\]](#ref1)
 2. {:#n2}<em>Correct man and great man</em>. These are literal translations of C. 正士 and 大士. They were likely translations of S. <em>sat-puruṣa</em> and <em>mahā-puruṣa</em>. [\[back\]](#ref2)
+
 ---
 
 Translator: Charles Patton
