--- a/01_agama/samyukta/13/SA13_17.md
+++ b/01_agama/samyukta/13/SA13_17.md
@@ -14,7 +14,7 @@ next: SA13_18.html
 1\. Thus have I heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Now, I will explain the eight factors of the noble path. What are the eight? They are right view, right intent, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.”
+2\. It was then that the Bhagavān addressed the monks, “Now, I will explain the eight factors of the noble path. What are the eight? They are right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.”
 {:#p2}
 
 3\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
