--- a/01_agama/samyukta/13/SA13_7.md
+++ b/01_agama/samyukta/13/SA13_7.md
@@ -17,7 +17,7 @@ next: SA13_8.html
 2\. It was then that Venerable Śāriputra went to the Buddha, prostrated at his feet, and withdrew to sit at one time. He said to the Buddha, “Bhagavān, there’s the expression ‘roots and requirements of the noble ones’ samādhi.’ What are these ‘roots and requirements of the noble ones’ samādhi’?”
 {:#p2}
 
-The Buddha told Śāriputra, “That refers to the seven parts of the right path that are both the roots and requirements of the noble ones’ samādhi. What are the seven? They are right view, right intent, right speech, right action, right livelihood, right method, and right mindfulness. Śāriputra, after someone has come to possess these seven parts of the path, they gain oneness of mind. These are called the roots and requirements of the noble ones’ samādhi.”
+The Buddha told Śāriputra, “That refers to the seven parts of the right path that are both the roots and requirements of the noble ones’ samādhi. What are the seven? They are right view, right intention, right speech, right action, right livelihood, right method, and right mindfulness. Śāriputra, after someone has come to possess these seven parts of the path, they gain oneness of mind. These are called the roots and requirements of the noble ones’ samādhi.”
 
 3\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p3}
