Updated MA 2 and other minor corrections in DA 14, etc.

--- a/01_agama/dirgha/DA_14.md
+++ b/01_agama/dirgha/DA_14.md
@@ -30,7 +30,7 @@ next: DA_15.html
 6\. Śakra the Lord of Gods, the Trāyastriṃśa gods, and Pañcaśikha then suddenly disappeared from up in the Dharma [Meeting] Hall. In the time it takes a strong man to flex his arm, they arrived on Mount Vaidehaka in the north of Magadha.
 {:#p6}
 
-7\. At the time, the Bhagavān had entered the samādhi of blazing fire, and Mount Vaidehaka looked like one giant flame. The people in the countryside saw its appearance and said, “Mount Vaidehaka looks like one giant flame. Is this due to the power of gods that are arriving?”
+7\. At the time, the Bhagavān had entered the samādhi of blazing fire, and Mount Vaidehaka looked like one giant flame. The people in the countryside saw its appearance and said, “Mount Vaidehaka looks like one giant flame. Is this due to the power of the gods that are arriving?”
 {:#p7}
 
 8\. Śakra the Lord of Gods told Pañcaśikha, “The Tathāgata, the Arhat, is so hard to see, but we can go down to this place of seclusion that’s quiet without voices, where the animals gather. There, the Bhagavān is constantly attended to by great spirits and gods. You can take the lead and play music with your cymophane lute to delight the Bhagavān. I and the gods will be right behind you!”
@@ -102,7 +102,7 @@ You’ll consider it well.”
 10\. The Bhagavān then roused from his samādhi and told Pañcaśikha, “Good, Pañcaśikha, good! You’re able to praise the Tathāgata with your clear voice and harmonious cymophane lute. The sound of both your lute and voice are neither long or short. Their compassion and gracefulness moves people’s hearts. Your song is replete with many meanings and explains the bonds of desire, the religious life, the ascetic, and Nirvāṇa!”
 {:#p10}
 
-11\. Pañcaśikha then said to the Buddha, “I remember when the Bhagavān became a Buddha sitting beneath the Ajapāla Nigrodha tree on the bank of the Nairañjanā River in Uruvilvā. The great god general’s son Sikhaddi and the gandharva king’s daughter had a rendezvous just to enjoy themselves. I saw the way they were feeling at the time and composed this song. The lyrics explain the bond of desire, and they explain the religious life, the ascetic, and Nirvāṇa.
+11\. Pañcaśikha then said to the Buddha, “I remember when the Bhagavān became a Buddha sitting beneath the Ajapāla Nigrodha tree on the bank of the Nairañjanā River in Uruvilvā. The great god general’s son Sikhaddi and the gandharva king’s daughter had a rendezvous just to enjoy themselves. I saw the way they were feeling at the time and composed this song. The lyrics explain the bonds of desire, and they explain the religious life, the ascetic, and Nirvāṇa.
 {:#p11}
 
 12\. “After she heard my song, the goddess raised her eyes, smiled, and said to me, ‘Pañcaśikha, I’ve never seen a Tathāgata, but I heard the other gods in the Trāyastriṃśa Dharma Meeting Hall praising the virtues and abilities possessed by the Tathāgata. You’ve always been faithful and close to the Tathāgata. I think I’d like to be friends with you.’ Bhagavān, after speaking with her that one time, I never spoke with her again.”
@@ -201,7 +201,7 @@ Leaping to the Trāyastriṃśa Heaven.\\
 Śakra lauded them as never before,\\
 And the gods also saw them pass away:
 
-* {:.verse}‘These are the Śākya disciples\\
+* {:.verse}‘These are the Śākyan disciples\\
 Who leapt to the Trāyastriṃśa Heaven!\\
 They tired of being fettered by desire.’\\
 [Gopaka] spoke these words:
@@ -236,9 +236,9 @@ The Buddha said, “Go ahead and ask your questions. I will explain them for you
 27\. Lord Śakra then asked the Buddha, “What bonds do gods, worldly men, gandharvas, asuras, and other sentient beings all associate with that they become enemies and take up arms against each other?”
 {:#p27}
 
-The Buddha told Śakra, “The arising of the bond of enmity has its origin in greed and jealousy. Therefore, it leads gods, worldly people, asuras, and other sentient beings to take up arms against one another.”
+The Buddha told Śakra, “The arising of the bond of enmity has its origin in greed and jealousy. Therefore, it leads gods, worldly people, asuras, and other sentient beings to take up arms against each other.”
 
-28\. Lord Śakra then said to the Buddha, “Indeed, it is, Bhagavān! The arising of the bond of enmity has its origin in greed and jealousy. Therefore, it leads gods, worldly people, asuras, and other sentient beings to take up arms against one another. Now that I’ve heard the Buddha’s explanation, a snare of doubt has been removed. I won’t wonder about it anymore.
+28\. Lord Śakra then said to the Buddha, “Indeed, it is, Bhagavān! The arising of the bond of enmity has its origin in greed and jealousy. Therefore, it leads gods, worldly people, asuras, and other sentient beings to take up arms against each other. Now that I’ve heard the Buddha’s explanation, a snare of doubt has been removed. I won’t wonder about it anymore.
 {:#p28}
 
 29\. “But I don’t understand the arising of this greed and jealousy. Where do they come from? What are their causes and conditions? What’s their source? From what do they come to exist? From what do they cease to exist?”
@@ -265,7 +265,7 @@ The Buddha told Lord Śakra, “Craving arises from conception. Conception is it
 34\. Lord Śakra then said to the Buddha, “Indeed, it is, Bhagavān! Craving arises from conception. Conception is its cause and condition. Conception is its source. From this, it comes to exist. In its absence, it ceases to exist. Now that I’ve heard the Buddha’s explanation[, my confusion is completely removed.] I won’t wonder about it anymore.
 {:#p34}
 
-35\. “But I don’t understand the arising of conception. What is its cause and condition? What it its source? From what does it come to exist? From what does it cease to exist?”
+35\. “But I don’t understand the arising of conception. What is its causes and conditions? What it its source? From what does it come to exist? From what does it cease to exist?”
 {:#p35}
 
 36\. The Buddha told Lord Śakra, “The conception that gives rise to it has its origin in error.[\[3\]](#n3){:#ref3} Error is its cause and condition. Error is its source. From this, it comes to exist. In its absence, it ceases to exist.
@@ -302,7 +302,7 @@ The Buddha addressed Lord Śakra, “Not all the ascetics and the priests on the
 45\. The Buddha told Lord Śakra, “There are three kinds of error: First is speech, second are concepts, and third are pursuits. Speech is words that harm oneself, harm others, and harm both oneself and others. When these words are abandoned, one’s words don’t harm oneself, don’t harm others, and don’t harm both oneself and others. When that’s known, a monk’s words are such that he focuses his attention and isn’t distracted.
 {:#p45}
 
-46\. [Some] concepts also harm oneself, harm others, and harm both oneself and others. Abandoning these concepts, one’s conception is such that it doesn’t harm oneself, don’t harm others, and don’t harm oneself and others. When he knows this, the monk’s conception is such that he focuses his attention and isn’t distracted.
+46\. [Some] concepts also harm oneself, harm others, and harm both oneself and others. Abandoning these concepts, one’s conception is such that it doesn’t harm oneself, doesn’t harm others, and doesn’t harm oneself and others. When he knows this, the monk’s conception is such that he focuses his attention and isn’t distracted.
 {:#p46}
 
 47\. “Lord Śakra, pursuits also harm oneself, harm others, and harm both oneself and others. Abandoning these pursuits, one’s pursuits are such that they don’t harm oneself, don’t harm others, and don’t harm both oneself and others. When he knows this, the monk’s pursuits are such that he focuses his attention and isn’t distracted.”
@@ -356,7 +356,7 @@ The Buddha addressed Lord Śakra, “Not all the ascetics and the priests on the
 61\. Again, he asked the Buddha, “How many things does a monk call ‘the ultimate goal, the ultimate goal of the religious life, the ultimate goal of peace, and the ultimate goal that has no remainder’?”
 {:#p61}
 
-The Buddha told Lord Śakra, “To personally extinguish the suffering caused by craving is the ultimate goal, the ultimate goal of the religious life, the ultimate goal peace, and the ultimate goal without remainder.”
+The Buddha told Lord Śakra, “To personally extinguish the suffering caused by craving is the ultimate goal, the ultimate goal of the religious life, the ultimate goal of peace, and the ultimate goal that has no remainder.”
 
 62\. Lord Śakra said to the Buddha, “In the long night of the past, I was caught in a snare of doubt. Now, the Buddha has released me from that doubt.”
 {:#p62}
